export interface Component{
    render(): string 
}